# LegacyWeeklyChallenges

./: flake.nix  general_instructions.md  main.py  pyproject.toml  readme.md
.github/: pull_request_template.md
01-fog-of-war/: data.json  readme.md
01-fog-of-war/Abalue/: main.py  metadata.py  objects.py
01-fog-of-war/Blaatand29/: fog_of_war.py  main.py  metadata.py
01-fog-of-war/CoopERR/: main.py  metadata.py  utils.py
01-fog-of-war/Emc235#2196/: main.py  metadata.py  objects.py  utils.py
01-fog-of-war/MegaIng/: main.py  metadata.py  utils.py
01-fog-of-war/Miku/: main.py  metadata.py  objects.py  utils.py
01-fog-of-war/RoboMarchello/: main.py  objects.py
01-fog-of-war/alley-indie/: main.py  metadata.py
01-fog-of-war/andenixa/: main.py  metadata.py  objects.py
01-fog-of-war/arosso17/: main.py  metadata.py  test_stuff.py
01-fog-of-war/baconinvader/: main.py  metadata.py  objects.py
01-fog-of-war/base/: fog.py  main.py  metadata.py  objects.py  utils.py
01-fog-of-war/bitcraft/: main.py  metadata.py  objects.py
01-fog-of-war/bydariogamer/: main.py  metadata.py  objects.py
01-fog-of-war/cozyfractal/: main.py  objects.py  utils.py
01-fog-of-war/fkS124/: main.py  metadata.py  utils.py
01-fog-of-war/ghast/: main.py  metadata.py  objects.py
01-fog-of-war/grimmys/: main.py  metadata.py  objects.py  utils.py
02-particle-system/: readme.md
03-buttons/: data.json  readme.md
04-bouncing-bubbles/: data.json  readme.md
lib/: __init__.py  constants.py  core.py  showcase.py
wclib/: constants.py  core.py  showcase.py  utils.py  widgets.py
(+152 files in other folders)
