[tool.poetry]
name = "weekly-challenges"
version = "0.1.0"
description = "Setup and submissions for the Pygame Community Discord weekly challenges."
authors = ["ddorn"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.6"
pygame = "==2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
